# SELO-DSP

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CRITICAL_FIXES_NEEDED.md  EXCEPTION_LOGGING_IMPROVEMENTS.md  GPU-MEMORY-FIX.md  INSTALL-CHANGES.md  LICENSE  MODEL-UPDATE.md  POST_PROCESSING_REDUCTION.md  README.md  REFLECTION_SYSTEM_IMPROVEMENTS.md  REFLECTION_VALIDATION_ANALYSIS.md  SENTIENCE_ACTIVATION.md  SENTIENCE_CODE_REVIEW.md  SENTIENCE_IMPLEMENTATION.md  check.md  examplemodelfile.md  performance-config.env.example  pyproject.toml  updates.md
Reports/: ALL_FIXES_SUMMARY.md  Boot_Seed_Directive_Prompts.md  Codebase_Error_Report.md  FINAL_QUICK_WINS_COMPLETE.md  FINAL_SESSION_SUMMARY.md  LLM_Prompt_Systems_Analysis_Report.md  Persona_System_Audit_Report.md  reflection-saga-audit.md
selo-ai/: README-Windows.md  collect-env-vars.sh  detect-tier.sh  install-complete.sh  run_backend.py  selo-ai.service  start-full-server.sh  start-service.sh  uninstall-selo-ai.sh  windows-collect-env.ps1  windows-configure-firewall.ps1  windows-detect-gpu-tier.ps1  windows-install.ps1  windows-verify-installation.ps1
selo-ai/backend/: .env.example  .env.reflection-optimized  __init__.py  install_cuda_pytorch.sh  main.py  pytest.ini  requirements-dev.txt  requirements.txt  selo-ai-backend-enhanced.spec  selo-ai-backend.spec  setup.sh
selo-ai/backend/agent/: __init__.py  affective_state_manager.py  agent_loop_runner.py  agent_loop_runner_sentience.py  autobiographical_episode_service.py  emotion_index_service.py  emotion_vector_cache.py  emotional_depth_engine.py  episode_builder.py  episode_triggers.py  goal_manager.py  meta_reflection_processor.py  metacognition.py  planner_service.py  predictive_cognition.py  proactive_initiative.py  sentience_integration.py
selo-ai/backend/api/: agent_state_router.py  autobiographical_episode_router.py  dependencies.py  meta_router.py  persona_router.py  reflection.py  sdl_router.py  security.py  telemetry_router.py
selo-ai/backend/config/: __init__.py  adaptive_budgets.py  app_config.py  ollama-optimized.env  performance_config.py  reflection_config.py  thresholds.py
selo-ai/backend/constraints/: __init__.py  ab_testing.py  behavioral_guidelines.py  boilerplate_constraints.py  composition.py  core_constraints.py  ethical_guardrails.py  grounding_constraints.py  identity_constraints.py  persona_aware.py  sensory_constraints.py  telemetry.py  unified_system.py  validation_helpers.py  version_tracker.py
selo-ai/backend/conversation/: openings.py
selo-ai/backend/core/: __init__.py  boot_seed_system.py  capabilities.py  circuit_breaker.py  faiss_validator.py  graceful_degradation.py  health_monitor.py  model_optimizer.py  response_cache.py  startup_validator.py  streaming_llm.py
selo-ai/backend/db/: __init__.py  base.py  connection_pool.py  init_db.py  session.py
selo-ai/backend/llm/: DUAL_LLM_README.md  controller.py  dual_llm_config.py  response_validator.py  retry_utils.py  router.py  streaming_validator.py  token_budget.py
selo-ai/frontend/: README-tests.md  README.md  package-lock.json  package.json  playwright.config.ts  setup.sh  start-production.sh  tailwind.config.js
selo-ai/scripts/: collect-diagnostics.sh  fix-faiss-gpu-immediate.py  fix-faiss-gpu-runtime.py  fix-faiss-gpu.sh  validate-environment.sh  validate-install-env.sh  validate-model-configs.sh
(+160 files in other folders)
